# YoloServer

./: .gitignore  CMakeLists.txt  README.md
include/mss/: mss.hpp
include/tools/: BoundedThreadSafeQueue.hpp  Config.hpp  Debug.hpp  ScopedTimer.hpp
include/yolo/: YOLO11-Base.hpp  YOLO11-Classify.hpp  YOLO11-Detect.hpp  YOLO11-OBB.hpp  YOLO11-Pose.hpp  YOLO11-Segment.hpp
lib/: cryptlib.lib  cryptlibd.lib
onnxruntime-win-x64-gpu/lib/: onnxruntime.lib
src/: yolo_server.cpp
易语言调用示例/: main.e  yolo11n.key  yyjson1.5.ec  yyjson1.5源码.e
